@@ -1,32 +1,31 @@
 /*
 CSS Stylesheet for Posts-per-Cat
 Plugin URI: http://blog.urosevic.net/wordpress/posts-per-cat/
-Description: List latests N article titles from all or top level only categories and group them in category boxes organized in two columns.
+Description: List latests N article titles from categories and group them to category boxes organized in two columns.
 Author: Aleksandar Urošević
-Version: 0.0.5
+Version: 0.0.8
 Author URI: http://urosevic.net
 */
+
+#ppc-box .ppc-box .ppc h3 {
+	margin: 0 0 10px 0;
+	padding: 0; }
+
 /* list style */
 #ppc-box .ppc-box .ppc ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
-#ppc-box .ppc-box .ppc ul li:before {
-/*
- * 00bb >>
- * 00ab <<
- * 00a3 >o<
- * 00de |o
- * 2023 ‣
- * 2022 •
- * 2192 →
- * 25C6 ◆
- */
-	content: "\2023 \0020"; }
+
+#ppc-box .ppc-box .ppc ul li {
+/*	padding: 0;
+	background: none;*/
+	padding-left: 15px;
+	background: url(/wp-content/plugins/posts-per-cat/bullet.gif) no-repeat left top;
+}
 
 /* fonts and colors of content */
-#ppc-box .ppc-box .ppc ul li p h3,
 #ppc-box .ppc-box .ppc ul li p {
 	margin: 0;
 	padding: 0;
